fix: fix responsive on mobile

--- a/abc-task/src/assets/main.css
+++ b/abc-task/src/assets/main.css
@@ -10,6 +10,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: #0d0c11;
 }
 
 #app {
